# chatbot-dynamic-memory

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
docs/: architecture.md
examples/: basic_usage.py
src/: config.py  ui.py
src/ai/agents/: __init__.py  example_agent.py
src/ai/agents/memory/: utils.py
src/ai/agents/tools/: publications.py
src/ai/models/: openai.py
src/users/entities/: user.py
